# fcr-gate

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: dependabot.yml  release.yml
.github/workflows/: calendar-release.yml  ci.yml  release.yml  security.yml
deploy/: 20-cloudflared.sh  30-fcr-rfid-encoder.sh  cloudflared.service  fcr-rfid-encoder.service  gateway.env.example
docs/: gateway-services.md
scripts/release/: assemble.sh  calver.sh  package.sh  publish.sh  set-version.sh  verify-archive.sh
src/: admin.rs  config.rs  engine.rs  impinj.rs  lib.rs  main.rs  metrics.rs  model.rs  store.rs  unifi.rs  web.rs
