[package]
name = "fcr-rfid-encoder"
version = "2026.7.22"
edition = "2024"
rust-version = "1.85"
description = "FCR Gate UniFi Access admin CLI and Impinj R700 encoder service"
license = "MIT"

[dependencies]
anyhow = "1.0.104"
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.2", features = ["derive"] }
csv = "1.4.0"
dotenvy = "0.15.7"
futures-util = "0.3.33"
prometheus-client = "0.25.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls", "stream"] }
rusqlite = { version = "0.37.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "fcr-rfid-encoder"
path = "src/main.rs"

[[bin]]
name = "fcr-gate-admin"
path = "src/bin/fcr-gate-admin.rs"

[profile.release]
lto = "thin"
strip = true
